test/testdata/syntax_error/break_outside_loop.lox
// syntax error: break statement must be inside a loop
break;
